# fqcex

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adr_proposal.md  bug_report.md  config.yml  feature_request.md  ops_incident.md
.github/workflows/: cd.yml  ci.yml
apps/control-plane-ui/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
deploy/: .env.example  Dockerfile  docker-compose.yml  dry-run.env  live-canary.env.example  operator-ui.Dockerfile
deploy/scripts/: bootstrap-server.sh  deploy.sh  preflight-live.sh  rollback.sh
docs/adr/: 0001-main-runtime-is-nautilus.md  0002-phase1-usdt-linear-perps-only.md  0003-supervisor-owns-tradeability.md
docs/architecture/: ARCHITECTURE.md  AUDIT_LOG.md  CODEX_CLOUD_BOUNDARIES.md  DATA_MODEL.md  STATE_MACHINE.md  control-plane-api.md
docs/decisions/: PHASE1_FREEZE.md
docs/memory/: ACTIVE_WORK.md  PROJECT_STATE.md  SESSION_HANDOFF.md
docs/plans/: 2026-03-18-agents-and-roadmap-issues-implementation.md  2026-03-18-governance-bootstrap-implementation.md  2026-03-18-issue-decomposition-governance-design.md  2026-03-19-issue-83-smoke-rollback.md  (+155 more)
scripts/: capture_dry_run_audit.py  codex_cloud_setup.sh  inject_private_silence.py  inject_reconcile_diff.py  inject_ws_disconnect.py  issue_orchestrator.py  live_canary_preflight.py  project_context.ps1  update_project_memory.py
tests/: conftest.py
(+194 files in other folders)
