[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "perp-platform"
version = "0.1.0"
description = "Perpetual futures connection platform bootstrap"
requires-python = ">=3.12"
dependencies = [
    "cryptofeed>=2.4,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
